fixed modal problem, mostly by wrapping display definitions in setTimeout()

--- a/style.css
+++ b/style.css
@@ -9,19 +9,18 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
 html {
-  height: 100%;
+  min-height: calc(100% - 1rem);
 }
 
 body {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-  height: 100%;
-  padding: 1rem;
+  min-height: calc(100% - 1rem);
 }
 
 h1 { 
   margin: 0;
   padding: 0; 
-  font-size: calc(2rem + 1vw);
+  font-size: calc(1.5rem + 1.25vw);
   text-align: center;
 }
 
@@ -29,6 +28,7 @@ h2 {
   margin: 0;
   padding: 0.5rem;
   font-size: calc(1rem + 1.25vw);
+  
   font-style: italic;
   text-align: center;
 }
@@ -39,8 +39,9 @@ h3 {
 }
 
 header {
-  margin: 0 auto 10px auto;
+  margin: 1rem auto 1rem auto;
   max-width: 700px;
+  width: 95%;
   box-shadow: 0 4px 7px black;
   border-radius: 5px;
 }
@@ -51,13 +52,16 @@ header {
 
 main { 
   max-width: 900px;
-  margin: 40px auto;
-  display: block;
+  width: 95%; 
   border: 1px solid black;
   box-shadow: 3px 3px 3px cadetblue;
   padding: 25px 30px;
   background-color: rgba(70, 70, 165, 0.055);
   border-radius: 10px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 
 }
 .searchForm form {
@@ -119,14 +123,14 @@ textarea:focus {
   margin: 0;
 }
 
-span,
+main span,
 .definition-box { 
   padding: 2px;
   border-radius: 5px;
 }
 
 .definition-box:hover,
-span:hover,
+main span:hover,
 .synonyms-box li p:hover {
   background-color:lightskyblue;
 }
@@ -171,7 +175,7 @@ ul {
 }
 
 footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
@@ -199,7 +203,7 @@ footer img {
 
 footer p {
   text-align: center;
-  font-size: calc(0.75rem + 0.25vw);
+  font-size: calc(0.5rem + 0.75vw);
 }
 
 a {
